# edcalc

./: .gitignore  CMakeLists.txt  EuclideanDistance.h  EuclideanDistance.hpp  Makefile  README.md  a.out  assembly_list.s  benchmark.cpp  benchmark.hpp  compile_info.txt  ed128d.cpp  ed128d.h  ed128d.hpp  ed256d.cpp  ed256d.h  ed256d.hpp  ed_128d.cpp  ed_128d.hpp  ed_256d.cpp  ed_256d.hpp  ed_baseline.cpp  ed_baseline.hpp  edcalc.c  edcalc.h  ednaive.cpp  ednaive.h  ednaive.hpp  euclidean_distance.hpp  hdcalc.c  hdcalc.h  main.cpp  main_2.cpp  t.c  t.cpp
adapter/c/: C_Distance.c  C_Distance.h  Distance_C_Adapter.cpp  Distance_C_Adapter.hpp
adapter/cpp/: DistanceMeasureAdapter.cpp  DistanceMeasureFactory.cpp  DistanceMeasureFactory.hpp  MathCustom.cpp
adapter/python/: EuclideanDistanceAdapter.c
benchmark/: StopWatch.cpp  StopWatch.hpp  benchmark.cpp  benchmark.hpp
debug/: main.c  main.cpp  main.py  resultados.txt
distance-measure/: __m128d__distance.cpp  __m128d__distance.hpp  __m256d__distance.cpp  __m256d__distance.hpp  baseline_distance.cpp  baseline_distance.hpp  distance.c  distance.h  distance_measure.hpp  distance_measure_adapter.cpp  distance_measure_adapter.hpp  distance_measure_factory.cpp  distance_measure_factory.hpp
euclidean-distance/: euclidean_distance.hpp
euclidean_distance/: ed_128d.cpp  ed_256d.hpp  euclidean_distance.hpp
python/: Benchmark.py  main.py
